# metafuse-io

./: .dockerignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  MIGRATION_v0.4.0.md  README.md  codecov.yml  install.sh
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: audit.yml  benchmarks.yml  ci.yml  cloud-tests.yml  coverage.yml  lint.yml  release.yml
benches/: cloud_backend_benchmarks.rs  emitter_benchmarks.rs
crates/catalog-api/: Cargo.toml
crates/catalog-api/src/: alerting.rs  api_keys.rs  contracts.rs  control_plane.rs  health.rs  lib.rs  lineage.rs  main.rs  metrics.rs  multi_tenant.rs  quality.rs  rate_limiting.rs  test_utils.rs
crates/catalog-api/tests/: control_plane_integration_tests.rs  enterprise_feature_tests.rs  multi_region_tests.rs  quota_enforcement_tests.rs  security_integration_tests.rs  tenant_api_key_tests.rs  tenant_resolution_e2e_tests.rs  write_endpoint_tests.rs
crates/catalog-cli/: Cargo.toml
crates/catalog-cli/src/: main.rs
crates/catalog-client/: Cargo.toml
crates/catalog-client/src/: cache.rs  client.rs  config.rs  error.rs  lib.rs  types.rs
crates/catalog-client/src/datafusion/: catalog.rs  mod.rs  schema.rs  table.rs
crates/catalog-client/tests/: client_integration_tests.rs
crates/catalog-core/: Cargo.toml
crates/catalog-core/src/: lib.rs  validation.rs
crates/catalog-core/src/migrations/: mod.rs  v1_3_0.rs  v1_4_0.rs  v1_5_0.rs  v1_5_1.rs  v1_6_0.rs  v1_7_0.rs
crates/catalog-delta/src/: lib.rs
crates/catalog-emitter/: Cargo.toml
crates/catalog-emitter/src/: lib.rs
crates/catalog-lineage/: Cargo.toml
crates/catalog-lineage/src/: error.rs  lib.rs  parser.rs  types.rs
crates/catalog-storage/: Cargo.toml  MIGRATION_v0.4.md
crates/catalog-storage/crates/catalog-storage/tests/: gcs_emulator_tests.rs  s3_emulator_tests.rs
crates/catalog-storage/src/: cache.rs  factory.rs  lib.rs  sync_adapter.rs  tenant.rs
crates/catalog-storage/tests/: gcs_emulator_tests.rs  s3_emulator_tests.rs  stress_tests.rs
docs/: COMMUNITY.md  METRICS.md  MIGRATION-v0.4.md  MIGRATION-v0.5.md  SECURITY.md  STRESS-TESTING.md  architecture.md  cloud-emulator-tests.md  deployment-aws.md  deployment-gcp.md  for-developers.md  grafana-dashboard.json  roadmap.md  security-checklist.md  troubleshooting.md
examples/: README.md  lineage_tracking.rs  metrics_demo.rs  simple_pipeline.rs
tests/: integration_test.rs
