[workspace]
members = [
    "crates/catalog-core",
    "crates/catalog-emitter",
    "crates/catalog-storage",
    "crates/catalog-api",
    "crates/catalog-cli",
]

resolver = "2"

# Virtual workspace package for examples
[package]
name = "metafuse-examples"
version.workspace = true
edition.workspace = true
publish = false

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["Ethan Urbanski <ethan@urbanskitech.com>"]
repository = "https://github.com/ethan-tyler/MetaFuse"
description = "MetaFuse: a lightweight, serverless data catalog for DataFusion and lakehouse pipelines."
version = "0.1.0"

[workspace.dependencies]
# Core dependencies
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

# Database
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }

# DataFusion
datafusion = "51"

# API/Server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Serialization
serde_json = "1"

# Testing
tempfile = "3"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[dev-dependencies]
tempfile = "3"
serde_json.workspace = true
criterion.workspace = true

# Package dependencies for examples
[dependencies]
metafuse-catalog-core = { path = "crates/catalog-core" }
metafuse-catalog-emitter = { path = "crates/catalog-emitter" }
metafuse-catalog-storage = { path = "crates/catalog-storage" }
datafusion.workspace = true
tokio.workspace = true

# Features
[features]
bench = []

# Examples
[[example]]
name = "simple_pipeline"
path = "examples/simple_pipeline.rs"

[[example]]
name = "lineage_tracking"
path = "examples/lineage_tracking.rs"

# Benchmarks
[[bench]]
name = "emitter_benchmarks"
path = "benches/emitter_benchmarks.rs"
harness = false
required-features = ["bench"]
