[workspace]
members = [
    "crates/catalog-core",
    "crates/catalog-delta",
    "crates/catalog-emitter",
    "crates/catalog-storage",
    "crates/catalog-api",
    "crates/catalog-cli",
    "crates/catalog-client",
]

resolver = "2"

# Virtual workspace package for examples
[package]
name = "metafuse-examples"
version.workspace = true
edition.workspace = true
publish = false

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["Ethan Urbanski <ethan@urbanskitech.com>"]
repository = "https://github.com/ethan-tyler/MetaFuse"
description = "MetaFuse: a lightweight, serverless data catalog for DataFusion and lakehouse pipelines."
version = "0.5.0"

[workspace.lints.clippy]
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
large_futures = "warn"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
# Core dependencies
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

# Delta Lake integration
deltalake = { version = "0.29" }
lru = "0.12"
regex = "1"

# Metrics (optional)
prometheus = "0.13"
lazy_static = "1.4"

# Rate limiting (optional)
dashmap = "6.0"

# API keys (optional)
bcrypt = "0.17"
rand = "0.8"
hex = "0.4"

# Database
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }

# DataFusion (pinned to 50.x for deltalake 0.29 compatibility)
datafusion = "50"

# API/Server
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Serialization
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# Testing
tempfile = "3"

# Benchmarking
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }

[dev-dependencies]
tempfile = "3"
serde_json.workspace = true
criterion.workspace = true

# Package dependencies for examples
[dependencies]
metafuse-catalog-core = { path = "crates/catalog-core" }
metafuse-catalog-emitter = { path = "crates/catalog-emitter" }
metafuse-catalog-storage = { path = "crates/catalog-storage" }
datafusion.workspace = true
tokio.workspace = true
chrono.workspace = true

# Features
[features]
bench = []

# Examples
[[example]]
name = "simple_pipeline"
path = "examples/simple_pipeline.rs"

[[example]]
name = "lineage_tracking"
path = "examples/lineage_tracking.rs"

# Benchmarks
[[bench]]
name = "emitter_benchmarks"
path = "benches/emitter_benchmarks.rs"
harness = false
required-features = ["bench"]

[[bench]]
name = "cloud_backend_benchmarks"
path = "benches/cloud_backend_benchmarks.rs"
harness = false
