[package]
name = "metafuse-catalog-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "REST API server for MetaFuse catalog"

[[bin]]
name = "metafuse-api"
path = "src/main.rs"

[dependencies]
metafuse-catalog-core = { path = "../catalog-core" }
metafuse-catalog-storage = { path = "../catalog-storage" }

axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
rusqlite.workspace = true
uuid.workspace = true
