[package]
name = "metafuse-catalog-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "REST API server for MetaFuse catalog"

[[bin]]
name = "metafuse-api"
path = "src/main.rs"

[features]
# Enterprise features enabled by default for v0.7.0
default = ["audit", "usage-analytics", "classification"]
metrics = ["prometheus", "lazy_static"]
rate-limiting = ["dashmap"]
api-keys = ["bcrypt", "rand", "dashmap", "hex"]
# Phase 3: Enterprise Features
audit = []
usage-analytics = ["dashmap"]
classification = ["regex"]
# v0.8.0: Quota enforcement
quota-enforcement = ["api-keys"]
# v0.9.0: Alerting and Data Contracts
alerting = ["reqwest", "rand"]
contracts = []
# Enterprise bundle (all enterprise features)
enterprise = ["audit", "usage-analytics", "classification"]
# Production bundle (enterprise + security + quotas + alerting + contracts)
production = ["enterprise", "rate-limiting", "api-keys", "metrics", "quota-enforcement", "alerting", "contracts"]
# Test utilities for integration tests
test-utils = ["tempfile"]

[dependencies]
metafuse-catalog-core = { path = "../catalog-core" }
metafuse-catalog-storage = { path = "../catalog-storage" }
metafuse-catalog-delta = { path = "../catalog-delta" }

axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
rusqlite.workspace = true
uuid.workspace = true

# Optional: Metrics
prometheus = { workspace = true, optional = true }
lazy_static = { workspace = true, optional = true }

# Optional: Rate limiting
dashmap = { workspace = true, optional = true }

# Optional: API keys
bcrypt = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
hex = { workspace = true, optional = true }

# Optional: Classification (Phase 3)
regex = { workspace = true, optional = true }

# Optional: Alerting (v0.9.0)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

# Optional: Test utilities
tempfile = { workspace = true, optional = true }

[dev-dependencies]
serial_test = "3.0"
tempfile = { workspace = true }
