[package]
name = "metafuse-catalog-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CLI for MetaFuse catalog"

[[bin]]
name = "metafuse"
path = "src/main.rs"

[dependencies]
metafuse-catalog-core = { path = "../catalog-core" }
metafuse-catalog-storage = { path = "../catalog-storage", features = ["legacy-sync"] }

clap.workspace = true
serde_json.workspace = true
chrono.workspace = true
rusqlite.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
