[package]
name = "metafuse-catalog-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CLI for MetaFuse catalog"

[[bin]]
name = "metafuse"
path = "src/main.rs"

[features]
default = []
api-keys = ["dep:metafuse-catalog-api", "metafuse-catalog-api/api-keys"]

[dependencies]
metafuse-catalog-core = { path = "../catalog-core" }
metafuse-catalog-storage = { path = "../catalog-storage", features = ["legacy-sync"] }
metafuse-catalog-api = { path = "../catalog-api", optional = true }

clap.workspace = true
serde_json.workspace = true
chrono.workspace = true
rusqlite.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
