[package]
name = "metafuse-catalog-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core types and SQLite schema for MetaFuse data catalog"

[dependencies]
serde.workspace = true
chrono.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
datafusion.workspace = true
