[package]
name = "metafuse-catalog-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Storage backend abstraction for MetaFuse catalog"

[dependencies]
metafuse-catalog-core = { path = "../catalog-core" }
rusqlite.workspace = true
thiserror.workspace = true
tempfile.workspace = true
object_store = { version = "0.12.4", optional = true }

# Future: GCS/S3 client libraries
# google-cloud-storage = { version = "0.15", optional = true }
# aws-sdk-s3 = { version = "1", optional = true }

[dev-dependencies]
tempfile.workspace = true

[features]
default = ["local"]
local = []
gcs = ["object_store", "object_store/gcp"]
s3 = ["object_store", "object_store/aws"]
