[package]
name = "metafuse-catalog-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Storage backend abstraction for MetaFuse catalog"

[dependencies]
metafuse-catalog-core = { path = "../catalog-core" }
rusqlite.workspace = true
thiserror.workspace = true
tempfile.workspace = true

# Cloud storage backends (optional)
object_store = { version = "0.12.4", optional = true }
tokio = { workspace = true, optional = true, features = ["fs", "rt"] }
futures = { version = "0.3", optional = true }
dirs = { version = "5.0", optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true

[features]
default = ["local"]
local = []
gcs = ["object_store", "object_store/gcp", "tokio", "futures", "dirs", "serde", "serde_json", "tracing"]
s3 = ["object_store", "object_store/aws", "tokio", "futures", "dirs", "serde", "serde_json", "tracing"]
cloud = ["gcs", "s3"]
