[package]
name = "metafuse-catalog-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Storage backend abstraction for MetaFuse catalog"

[dependencies]
metafuse-catalog-core = { path = "../catalog-core" }
rusqlite.workspace = true
thiserror.workspace = true
tempfile.workspace = true

# Async runtime (required for all backends)
tokio = { workspace = true, features = ["fs", "rt", "rt-multi-thread", "macros", "sync"] }
futures = "0.3"

# Multi-tenant backend factory
lru = { workspace = true }
parking_lot = "0.12"
tracing = { workspace = true }
dashmap = "6.0"

# Cloud storage backends (optional)
object_store = { version = "0.12.4", optional = true }
dirs = { version = "6.0", optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
bytes = { version = "1", optional = true }

[dev-dependencies]
tempfile.workspace = true
testcontainers = "0.15"
chrono.workspace = true

[features]
default = ["local"]
local = []
gcs = ["object_store", "object_store/gcp", "dirs", "serde", "serde_json", "bytes"]
s3 = ["object_store", "object_store/aws", "dirs", "serde", "serde_json", "bytes"]
cloud = ["gcs", "s3"]
